# portablemsvc

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  bunfig.toml  mise.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
notebook/: stepthrough.ipynb
src/portablemsvc/: __init__.py  cli.py  config.py  controller.py  download.py  download_manifest.py  extract.py  install.py  install_status.py  lockfile.py  manifest.py  manifest_items.py  parse_manifest.py  parse_msi.py  registry_helpers.py
tests/: conftest.py
tests/portablemsvc/: test_cli.py  test_correctness.py  test_download.py  test_extract.py  test_install.py  test_install_behavior.py  test_install_parity.py  test_integration.py  test_long_path_extract.py  test_manifest.py  test_manifest_items.py  test_parse_manifest.py  test_version_flow.py
