[project]
name = "portablemsvc"
version = "0.1.0"
description = "Installs Portable MSVC tools in user space"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "filelock>=3.0.0",
    "winregenv>=0.2.0",
    "plumbum>=1.9.0",
    "platformdirs>=4.3.8"
]

[project.scripts]
portablemsvc = "portablemsvc.cli:PortableMSVCApp"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

keywords = ["compiler", "environment","cli"]

license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]

